--- a/assertj-android/build.gradle
+++ b/assertj-android/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-  compile rootProject.ext.assertj
-  compile rootProject.ext.supportAnnotations
+  implementation rootProject.ext.assertj
+  implementation rootProject.ext.androidxAnnotation
 }
 
 android {
