Use androidx.* instead of android.support.*

--- a/assertj-android/build.gradle
+++ b/assertj-android/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-  implementation rootProject.ext.assertj
+  api rootProject.ext.assertj
   implementation rootProject.ext.androidxAnnotation
 }
 
