--- a/assertj-android-appcompat-v7/build.gradle
+++ b/assertj-android-appcompat-v7/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-  compile project(':assertj-android')
-  compile rootProject.ext.supportAppCompat
+  implementation project(':assertj-android')
+  implementation rootProject.ext.androidxAppCompat
 }
 
 android {
