--- a/assertj-android-cardview-v7/build.gradle
+++ b/assertj-android-cardview-v7/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-  compile project(':assertj-android')
-  compile rootProject.ext.supportCardView
+  implementation project(':assertj-android')
+  implementation rootProject.ext.androidxCardView
 }
 
 android {
