Use androidx.* instead of android.support.*

--- a/assertj-android-gridlayout-v7/build.gradle
+++ b/assertj-android-gridlayout-v7/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-  compile project(':assertj-android')
-  compile rootProject.ext.supportGridLayout
+  implementation project(':assertj-android')
+  implementation rootProject.ext.androidxGridLayout
 }
 
 android {
