--- a/assertj-android-play-services/build.gradle
+++ b/assertj-android-play-services/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-  compile project(':assertj-android')
-  compile rootProject.ext.playServices
+  implementation project(':assertj-android')
+  implementation rootProject.ext.playServices
 }
 
 android {
