--- a/assertj-android-recyclerview-v7/build.gradle
+++ b/assertj-android-recyclerview-v7/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-  compile project(':assertj-android')
-  compile rootProject.ext.supportRecyclerView
+  implementation project(':assertj-android')
+  implementation rootProject.ext.androidxRecyclerView
 }
 
 android {
