--- a/assertj-android-support-v4/build.gradle
+++ b/assertj-android-support-v4/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-  compile project(':assertj-android')
-  compile rootProject.ext.supportV4
+  implementation project(':assertj-android')
+  implementation rootProject.ext.androidxSupportV4
 }
 
 android {
