exclude com.android.support

--- a/assertj-android-play-services/build.gradle
+++ b/assertj-android-play-services/build.gradle
@@ -2,7 +2,9 @@ apply plugin: 'com.android.library'
 
 dependencies {
   implementation project(':assertj-androidx')
-  implementation rootProject.ext.playServices
+  implementation(rootProject.ext.playServices) {
+    exclude group: "com.android.support"
+  }
 }
 
 android {
