--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@ rootProject.name = 'assertj-androidx-root'
 include ':assertj-androidx'
 include ':assertj-androidx-appcompat'
 include ':assertj-androidx-cardview'
-include ':assertj-android-design'
+include ':assertj-androidx-material'
 include ':assertj-android-gridlayout-v7'
 include ':assertj-android-mediarouter-v7'
 include ':assertj-android-palette-v7'
