--- a/assertj-androidx-appcompat/src/main/AndroidManifest.xml
+++ b/assertj-androidx-appcompat/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.squareup.assertj.android.appcompat.v7">
+<manifest package="com.squareup.assertj.androidx.appcompat">
   <application/>
 </manifest>
