Configure bintray upload

--- a/assertj-androidx-cardview/gradle.properties
+++ b/assertj-androidx-cardview/gradle.properties
@@ -1,3 +1,3 @@
-POM_ARTIFACT_ID=assertj-android-cardview-v7
-POM_NAME=AssertJ for Android CardView v7
+POM_ARTIFACT_ID=assertj-androidx-cardview
+POM_NAME=AssertJ for AndroidX CardView
 POM_PACKAGING=aar
