--- a/assertj-androidx-appcompat/gradle.properties
+++ b/assertj-androidx-appcompat/gradle.properties
@@ -1,3 +1,3 @@
-POM_ARTIFACT_ID=assertj-android-appcompat-v7
-POM_NAME=AssertJ for Android AppCompat v7
+POM_ARTIFACT_ID=assertj-androidx-appcompat
+POM_NAME=AssertJ for AndroidX AppCompat
 POM_PACKAGING=aar
