--- a/assertj-androidx-gridlayout/gradle.properties
+++ b/assertj-androidx-gridlayout/gradle.properties
@@ -1,3 +1,3 @@
-POM_ARTIFACT_ID=assertj-android-gridlayout-v7
-POM_NAME=AssertJ for Android GridLayout v7
+POM_ARTIFACT_ID=assertj-androidx-gridlayout
+POM_NAME=AssertJ for AndroidX GridLayout
 POM_PACKAGING=aar
