--- a/assertj-androidx-material/gradle.properties
+++ b/assertj-androidx-material/gradle.properties
@@ -1,3 +1,3 @@
-POM_ARTIFACT_ID=assertj-android-design
-POM_NAME=AssertJ for Android Design Support
+POM_ARTIFACT_ID=assertj-androidx-material
+POM_NAME=AssertJ for AndroidX Material Support
 POM_PACKAGING=aar
