--- a/assertj-androidx-mediarouter/gradle.properties
+++ b/assertj-androidx-mediarouter/gradle.properties
@@ -1,3 +1,3 @@
-POM_ARTIFACT_ID=assertj-android-mediarouter-v7
-POM_NAME=AssertJ for Android MediaRouter v7
+POM_ARTIFACT_ID=assertj-androidx-mediarouter
+POM_NAME=AssertJ for AndroidX MediaRouter
 POM_PACKAGING=aar
