--- a/assertj-androidx-palette/gradle.properties
+++ b/assertj-androidx-palette/gradle.properties
@@ -1,3 +1,3 @@
-POM_ARTIFACT_ID=assertj-android-palette-v7
-POM_NAME=AssertJ for Android Palette v7
+POM_ARTIFACT_ID=assertj-androidx-palette
+POM_NAME=AssertJ for AndroidX Palette
 POM_PACKAGING=aar
