--- a/assertj-androidx-recyclerview/gradle.properties
+++ b/assertj-androidx-recyclerview/gradle.properties
@@ -1,3 +1,3 @@
-POM_ARTIFACT_ID=assertj-android-recyclerview-v7
-POM_NAME=AssertJ for Android RecyclerView v7
+POM_ARTIFACT_ID=assertj-androidx-recyclerview
+POM_NAME=AssertJ for AndroidX RecyclerView
 POM_PACKAGING=aar
