--- a/assertj-androidx-support-v4/gradle.properties
+++ b/assertj-androidx-support-v4/gradle.properties
@@ -1,3 +1,3 @@
-POM_ARTIFACT_ID=assertj-android-support-v4
-POM_NAME=AssertJ for Android Support v4 Library
+POM_ARTIFACT_ID=assertj-androidx-support-v4
+POM_NAME=AssertJ for AndroidX Legacy Support v4 Library
 POM_PACKAGING=aar
