--- a/assertj-androidx/gradle.properties
+++ b/assertj-androidx/gradle.properties
@@ -1,3 +1,3 @@
-POM_ARTIFACT_ID=assertj-android
-POM_NAME=AssertJ for Android
+POM_ARTIFACT_ID=assertj-androidx
+POM_NAME=AssertJ for AndroidX
 POM_PACKAGING=aar
