--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ subprojects {
     }
     dependencies {
       classpath 'com.android.tools.build:gradle:3.3.2'
+      classpath 'com.novoda:bintray-release:0.9'
     }
   }
 
