--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-GROUP=com.squareup.assertj
-VERSION_NAME=1.2.1-SNAPSHOT
+GROUP=com.github.bschramke.assertj
+VERSION_NAME=1.2.1
 
 POM_DESCRIPTION=A set of AssertJ assertion helpers geared toward testing Android.
 
